Añadir a mi amigo Pikoro

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <h3>Estos son mis amigos:</h3>    
         
         <nav>
-            <a href="vegeta.html">VEGETA</a> |
+            <a href="soyvegeta.html">VEGETA</a> |
+            <a href="soypikoro.html">PIKORO</a>
         </nav>
     </center>    
 </body>
